Terraform/Parte 6 - Stateful app/security-groups.tf
resource "aws_security_group" "p6-sg" {
  name   = "terraform-p6-sg"
  vpc_id = aws_vpc.vpc-p6.id
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "terraform-p6-sg"
  }
}

resource "aws_security_group" "p6-lb-sg" {
  name   = "terraform-p6-lb-sg"
  vpc_id = aws_vpc.vpc-p6.id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "terraform-p6-lb-sg"
  }
}
